--- a/WpfApplication8/AddWorker.xaml
+++ b/WpfApplication8/AddWorker.xaml
@@ -5,43 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication8"
         mc:Ignorable="d"
-        Title="AddWorker" Height="560" Width="600">
-    <Grid>
-        <Grid Margin="9,5,25,145">
+        Title="AddWorkerWindow" Height="560" Width="600">
+    <Grid Background="#FFEC1B06" Margin="0,0,-32,-19">
+        <Grid Margin="13,7,29,144" Background="#FFEE3B06">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="129*"/>
                 <ColumnDefinition Width="55*"/>
                 <ColumnDefinition Width="374*"/>
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="tNumberID" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="87" Margin="95,20,0,0" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="tPhone" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" Margin="98,147,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
-            <TextBox x:Name="tCity" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" Margin="96,278,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
-            <TextBox x:Name="tStreet" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="189,10,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tNumberHouse" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="189,81,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <Button  x:Name="tButton" Content="submit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="184" Margin="36,369,0,-63" Height="73" Click="Button_Click" Grid.Column="2"/>
-            <TextBox x:Name="tSalary" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="191,219,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tType" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="191,147,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tName_Copy" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="89" Margin="95,0,0,258" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="2" RenderTransformOrigin="0.563,0.573"/>
-            <Label Content="Number-Id:" HorizontalAlignment="Left" Height="39" Margin="10,20,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Name:" HorizontalAlignment="Left" Height="39" Margin="10,81,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Phone:" HorizontalAlignment="Left" Height="39" Margin="10,147,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Gender:" HorizontalAlignment="Left" Height="39" Margin="10,205,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="City:" Height="39" Margin="10,279,48,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Street:" HorizontalAlignment="Left" Height="39" Margin="82,10,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="number house:" HorizontalAlignment="Left" Height="39" Margin="67,82,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="Salary:" HorizontalAlignment="Left" Height="39" Margin="82,148,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="Type:" HorizontalAlignment="Left" Height="39" Margin="82,220,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <ComboBox x:Name="cGender" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="95,204,0,0" VerticalAlignment="Top" Width="96" Height="43">
+            <TextBox x:Name="tNumberId" HorizontalAlignment="Left" Height="49" TextWrapping="Wrap" VerticalAlignment="Top" Width="109" Margin="100,44,0,0" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tPhone" HorizontalAlignment="Left" Height="51" TextWrapping="Wrap" VerticalAlignment="Top" Width="105" Margin="100,180,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tCity" HorizontalAlignment="Left" Height="49" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" Margin="97,324,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tStreet" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" VerticalAlignment="Top" Width="185" Margin="169,54,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tNumberHouse" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="183" Margin="171,126,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tSalary" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" VerticalAlignment="Top" Width="183" Margin="173,195,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tName" HorizontalAlignment="Left" Height="51" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="108" Margin="99,0,0,235" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="3" RenderTransformOrigin="0.563,0.573"/>
+            <Label Content="Number-Id(9 dig):" Height="64" Margin="-10,46,35,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Name:" HorizontalAlignment="Left" Height="39" Margin="5,106,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Phone(10 dig):" HorizontalAlignment="Left" Height="39" Margin="2,176,0,0" VerticalAlignment="Top" Width="92" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Gender:" HorizontalAlignment="Left" Height="39" Margin="-1,256,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="City:" Height="39" Margin="-4,331,62,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Street:" HorizontalAlignment="Left" Height="39" Margin="41,51,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Number House:" HorizontalAlignment="Left" Height="39" Margin="39,130,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Salary(5300-100000):" HorizontalAlignment="Left" Height="54" Margin="38,195,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Employee Type:" HorizontalAlignment="Left" Height="39" Margin="66,260,0,0" VerticalAlignment="Top" Width="98" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <ComboBox x:Name="cGender" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="96,254,0,0" VerticalAlignment="Top" Width="107" Height="50">
                 <ComboBoxItem Content="Male" Height="31"/>
                 <ComboBoxItem Content="Female" Height="31"/>
             </ComboBox>
-            <ComboBox x:Name="cDeleted" HorizontalAlignment="Left" Margin="202,282,0,0" VerticalAlignment="Top" Width="96" Height="43" Grid.Column="2">
+            <ComboBox x:Name="cDeleted" HorizontalAlignment="Left" Margin="174,343,0,0" VerticalAlignment="Top" Width="184" Height="48" Grid.Column="2">
                 <ComboBoxItem Content="Active" Height="31"/>
                 <ComboBoxItem Content="Non-Active" Height="31"/>
             </ComboBox>
-            <Label Content="Status:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Margin="74,291,0,0" Height="34" Width="79"/>
+            <Label Content="EmployeeStatus:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Margin="63,343,0,0" Height="34" Width="97" RenderTransformOrigin="0.447,0.902"/>
 
         </Grid>
+        <Label Content="Add Worker:" HorizontalAlignment="Left" VerticalAlignment="Top" Height="39" Width="285" Margin="168,5,0,0" FontSize="20" FontFamily="Showcard Gothic"/>
+        <Button Content="Add Worker!" HorizontalAlignment="Left" VerticalAlignment="Top" Width="123" Margin="234,423,0,0" Height="53" Click="Button_Add_1"/>
+        <ComboBox x:Name="cType" HorizontalAlignment="Left" VerticalAlignment="Top" Width="185" Margin="376,268,0,0" Height="56" SelectionChanged="ComboBox_SelectionChanged" RenderTransformOrigin="0.32,0.638">
+            <ComboBoxItem Content="Management" HorizontalAlignment="Left" Width="185"/>
+            <ComboBoxItem Content="Administration" HorizontalAlignment="Left" Width="185" Margin="0,0,-1,0"/>
+            <ComboBoxItem Content="Production_Department_Mng" HorizontalAlignment="Left" Width="185"/>
+            <ComboBoxItem Content="Production Worker" HorizontalAlignment="Left" Width="185" Margin="0,0,-6,0"/>
+        </ComboBox>
 
     </Grid>
 </Window>
