--- a/WpfApplication8/UpdateEmployeeWindow.xaml
+++ b/WpfApplication8/UpdateEmployeeWindow.xaml
@@ -6,42 +6,48 @@
         xmlns:local="clr-namespace:WpfApplication8"
         mc:Ignorable="d"
         Title="UpdateEmployeeWindow" Height="560" Width="600">
-    <Grid>
-        <Grid Margin="9,5,25,145">
+    <Grid Background="#FFEC1B06" Margin="0,0,-32,-19">
+        <Grid Margin="9,5,25,145" Background="#FFEE3B06">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="129*"/>
                 <ColumnDefinition Width="55*"/>
                 <ColumnDefinition Width="374*"/>
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="tNumberId" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="87" Margin="95,20,0,0" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="tPhone" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" Margin="98,147,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
-            <TextBox x:Name="tCity" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" Margin="96,278,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
-            <TextBox x:Name="tStreet" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="189,10,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tNumberHouse" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="189,81,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tSalary" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="191,219,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tType" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="191,147,0,0" FontFamily="Arial" Grid.Column="2"/>
-            <TextBox x:Name="tName" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="89" Margin="95,0,0,258" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="2" RenderTransformOrigin="0.563,0.573"/>
-            <Label Content="Number-Id:" HorizontalAlignment="Left" Height="39" Margin="10,20,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Name:" HorizontalAlignment="Left" Height="39" Margin="10,81,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Phone:" HorizontalAlignment="Left" Height="39" Margin="10,147,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Gender:" HorizontalAlignment="Left" Height="39" Margin="10,205,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="City:" Height="39" Margin="10,279,48,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
-            <Label Content="Street:" HorizontalAlignment="Left" Height="39" Margin="82,10,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="number house:" HorizontalAlignment="Left" Height="39" Margin="67,82,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="Salary:" HorizontalAlignment="Left" Height="39" Margin="82,148,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <Label Content="Type:" HorizontalAlignment="Left" Height="39" Margin="82,220,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
-            <ComboBox x:Name="cGender" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="95,204,0,0" VerticalAlignment="Top" Width="96" Height="43">
+            <TextBox x:Name="tNumberId" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" VerticalAlignment="Top" Width="109" Margin="94,44,0,0" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tPhone" HorizontalAlignment="Left" Height="49" TextWrapping="Wrap" VerticalAlignment="Top" Width="111" Margin="93,182,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tCity" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="108" Margin="94,330,0,0" FontFamily="Arial" Grid.ColumnSpan="3"/>
+            <TextBox x:Name="tStreet" HorizontalAlignment="Left" Height="51" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Margin="175,48,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tNumberHouse" HorizontalAlignment="Left" Height="52" TextWrapping="Wrap" VerticalAlignment="Top" Width="183" Margin="176,124,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tSalary" HorizontalAlignment="Left" Height="51" TextWrapping="Wrap" VerticalAlignment="Top" Width="183" Margin="176,193,0,0" FontFamily="Arial" Grid.Column="2"/>
+            <TextBox x:Name="tName" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="110" Margin="94,0,0,238" FontFamily="Arial" TextChanged="TName_TextChanged" Grid.ColumnSpan="3" RenderTransformOrigin="0.563,0.573"/>
+            <Label Content="Number-Id(9 dig):" Height="39" Margin="-10,50,38,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Name:" HorizontalAlignment="Left" Height="39" Margin="5,106,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Phone(10 dig):" HorizontalAlignment="Left" Height="39" Margin="2,176,0,0" VerticalAlignment="Top" Width="89" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Gender:" HorizontalAlignment="Left" Height="39" Margin="-1,256,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="City:" Height="39" Margin="-4,331,62,0" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.47"/>
+            <Label Content="Street:" HorizontalAlignment="Left" Height="39" Margin="41,51,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Number House:" HorizontalAlignment="Left" Height="39" Margin="39,130,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Salary(5300-100000):" HorizontalAlignment="Left" Height="37" Margin="32,199,0,0" VerticalAlignment="Top" Width="129" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <Label Content="Employee Type:" HorizontalAlignment="Left" Height="39" Margin="55,262,0,0" VerticalAlignment="Top" Width="97" RenderTransformOrigin="0.804,0.47" Grid.Column="2"/>
+            <ComboBox x:Name="cGender" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="95,251,0,0" VerticalAlignment="Top" Width="110" Height="50" RenderTransformOrigin="0.488,1.011">
                 <ComboBoxItem Content="Male" Height="31"/>
                 <ComboBoxItem Content="Female" Height="31"/>
             </ComboBox>
-            <ComboBox x:Name="cDeleted" HorizontalAlignment="Left" Margin="202,282,0,0" VerticalAlignment="Top" Width="96" Height="43" Grid.Column="2">
+            <ComboBox x:Name="cDeleted" HorizontalAlignment="Left" Margin="175,347,0,-1" VerticalAlignment="Top" Width="188" Height="52" Grid.Column="2">
                 <ComboBoxItem Content="Active" Height="31"/>
                 <ComboBoxItem Content="Non-Active" Height="31"/>
             </ComboBox>
-            <Label Content="Status:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Margin="74,291,0,0" Height="34" Width="79"/>
+            <Label  Content="Employee status:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Margin="59,356,0,0" Height="34" Width="106"/>
+            <ComboBox x:Name="cType" HorizontalAlignment="Left" VerticalAlignment="Top" Width="185" Grid.Column="2" Margin="175,258,0,0" Height="54">
+                <ComboBoxItem Content="Managment" HorizontalAlignment="Left" Width="185"/>
+                <ComboBoxItem Content="Administraton" HorizontalAlignment="Left" Width="185"/>
+                <ComboBoxItem Content="Production_Department_Mng" HorizontalAlignment="Left" Width="185"/>
+                <ComboBoxItem Content="Production Worker" HorizontalAlignment="Left" Width="185"/>
+            </ComboBox>
 
         </Grid>
-        <Button Content="Save Changes!" HorizontalAlignment="Left" Height="57" Margin="217,419,0,0" VerticalAlignment="Top" Width="137" Click="Button_Click"/>
+        <Button Content="Save Changes!" HorizontalAlignment="Left" Height="57" Margin="234,437,0,0" VerticalAlignment="Top" Width="137" Click="Button_Click"/>
+        <Label Content="Change Worker Details:" HorizontalAlignment="Left" VerticalAlignment="Top" Height="39" Width="285" Margin="168,5,0,0" FontSize="20" FontFamily="Showcard Gothic"/>
 
     </Grid>
 </Window>
